# DA-truck-pallet-packing

./: .gitignore  README.md  TODO.md
code/: CMakeLists.txt  app.cpp  app.h  csv.cpp  csv.h  main.cpp  menu.cpp  menu.h  pallet.cpp  pallet.h  state.cpp  state.h  truck.cpp  truck.h  ui_flow.cpp  ui_flow.h
code/algorithms/: brute_force.cpp  brute_force.h  dynamic_prog.cpp  dynamic_prog.h  greedy.cpp  greedy.h
code/data_structures/: pallet.cpp  truck.h
code/menu/: menu.cpp  menu.h  state.h  ui_flow.cpp  ui_flow.h
code/performance_data/: bruteforce_report.csv  data.csv  dynamicprog_report.csv  greedy_report.csv  performance_data.cpp  performance_data.h
code/utils/: csv.h
docs/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  annotated.html  annotated_dup.js  app_8cpp.html  app_8h.html  app_8h.js  app_8h_source.html  brute__force_8cpp.html  brute__force_8cpp.js  brute__force_8h.html  brute__force_8h.js  brute__force_8h_source.html  classApp-members.html  classApp.html  classApp.js  classCsv-members.html  classCsv.html  classCsv.js  classMenu-members.html  classMenu.html  classMenu.js  classPallet-members.html  classPallet.html  classPallet.js  classState-members.html  classState.html  classState.js  classTruck-members.html  classTruck.html  classTruck.js  classes.html  csv_8cpp.html  csv_8h.html  csv_8h.js  csv_8h_source.html  dir_007ad4948e580287e9d3cd339e78f152.html  dir_08cec4c655d37361da453b6dde918433.html  dir_2e746e9d06bf2d8ff842208bcc6ebcfc.html  dir_860c11998a3807e839f8c74cce4c2bd1.html  (+66 more)
performance_analysis/: analysis.py  utils.py
(+113 files in other folders)
